--- a/templates/listrulec.sh.erb
+++ b/templates/listrulec.sh.erb
@@ -1,7 +1,7 @@
 #!/bin/bash
 
 HOST_NAME="<%= @cmkserver %>"
-SITE_NAME="cmk"
+SITE_NAME="<%= @cmksite %>"
 API_URL="http://$HOST_NAME:8080/$SITE_NAME/check_mk/api/1.0"
 
 USERNAME="automation"
