--- a/templates/listrulec.sh.erb
+++ b/templates/listrulec.sh.erb
@@ -2,7 +2,7 @@
 
 HOST_NAME="<%= @cmkserver %>"
 SITE_NAME="<%= @cmksite %>"
-API_URL="http://$HOST_NAME:8080/$SITE_NAME/check_mk/api/1.0"
+API_URL="http://$HOST_NAME:<%= @cmkport %>/$SITE_NAME/check_mk/api/1.0"
 
 USERNAME="automation"
 PASSWORD="<%= @apitoken %>"
